# docops

./: .cspell.json  .cspell.txt  .dict.txt  .editorconfig  .gitignore  .gitmodules  .markdownlint.jsonc  .markdownlint.yaml  .mergify.yml  .prettierrc.toml  .prettierrc.yaml  .prettierrc.yml  .prospector.yaml  .prospector.yml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  bootstrap.sh  cspell.json  pyproject.toml
.cspell.d/: abbr.txt  misc.txt  python.txt  terms.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: mergify.yml
.github/workflows/: build.yaml  ci.yaml  cicd.yaml  cicd.yml  codeql-analysis.yml  codeql.yml  docker.yaml  docops.yaml  make.yaml  packaging.yaml  push.yaml  tests.yaml  vscode.yaml
.vscode-examples/: launch.json
WIP/: CHANGES.md  CONTRIBUTING.md  Makefile  README.md
buildx/devcontainer/: Dockerfile  Makefile  bootstrap.sh
buildx/devcontainer/prep/: rules.mk
docops-containers/: .cspell.json  .dict.txt  .gitignore  README.md
docops-containers/.devcontainer/: devcontainer.json
docops-containers/.github/: mergify.yml
docops-containers/src/: Dockerfile  Makefile  clean.sh
docops-gitbook-client/: .editorconfig  pyproject.toml
docops-gitbook-client/.devcontainer/: Dockerfile  devcontainer.json
docops-gitbook-client/src/dgbc/: __init__.py
docops-gitbook-client/src/dgbc/cli/: __init__.py
docops-gloss-utils/: .editorconfig  .gitmodules  Makefile  pyproject.toml
docops-gloss-utils/.github/workflows/: tests.yaml
docops-gloss-utils/src/dgloss/: __init__.py  charset.py  config.py  print.py
docops-python/: .editorconfig  .gitignore  .markdownlint.yaml  .prospector.yaml  .restyled.yaml  Makefile  cspell.json  pyproject.toml
docops-python/.devcontainer/: Dockerfile  alpine-vale-server.sh  debian-vale-server.sh  devcontainer.json
docops-python/.github/workflows/: devcontainer.yaml  lint-checks.yaml  packaging.yaml  python-support.yaml
docops-python/docs/dev/: python.md
docops-python/docs/user/: gloss.md
docops-python/scratch/: compile-text.sh  out.txt
docops-python/src/doitintl/docops/: __init__.py
docops-python/src/doitintl/docops/gloss/: analyzer.py  cache.py  cli.py  config.py  print.py
docops-python/src/doitintl/docops/gloss/data/config/default/: dgloss.yaml
docops-python/src/doitintl/docops/nlp/: cli.py  test_pytextrank.py  test_textacy.py
docops-python/src/doitintl/docops/screenshots/cli/: __init__.py
docops-python/tests/config/: .dgloss.yaml
docops-python/tests/examples/: .dgloss.yaml
docops-python/tests/nlp/: compile.sh
docops-python/tests/rules/pkg/: poetry.mk
docops-python/vale-scraps/: env.txt
docs/dev/: python.md
docs/user/: gitbook.md  gloss.md
examples/: .dgloss.conf
images/python/base/: Dockerfile
poetry/: Makefile
poetry/docops-python/: .editorconfig
poetry/docops-python/.github/: mergify.yml
poetry/docops-python/tests/rules/cli/: docops-gitbook.mk
poetry/doitintl-docops/: Makefile
poetry/doitintl-docops/src/doitintl/: .gitignore
poetry/doitintl-docops/src/doitintl/docops/gitbook/: api.py
poetry/doitintl-docops/src/doitintl/docops/gloss/: config.py
poetry/doitintl-docops/src/doitintl/docops/gloss/analyzers/: terms.py
poetry/doitintl-docops/src/doitintl/docops/gloss/cli/: terms.py
poetry/doitintl-docops/tests/rules/cli/: docops-gloss-terms.mk
poetry/src/doitintl/: .gitignore
poetry/src/doitintl/docops/gitbook/: api.py
poetry/src/doitintl/docops/gloss/analyzers/: terms.py
poetry/src/doitintl/docops/gloss/cli/: terms.py
poetry/tests/config/: .dgloss.conf
python/poetry/: Dockerfile
slack/rtd/: test.sh  zapier.py
slack/rtd/examples/: incoming.json
src/: Dockerfile
src/bashrc/: path.sh
src/dev/: Dockerfile
src/dgloss/: __init__.py  cache.py  color.py  config.py
src/dgloss/analyzers/: terms.py
src/dgloss/cli/analyze/: terms.py
src/doitintl/: .gitignore
src/doitintl/docops/: __init__.py
src/doitintl/docops/gitbook/: api.py
src/doitintl/docops/gloss/: config.py
src/doitintl/docops/gloss/cli/: terms.py
src/gbc/: __init__.py
src/gbc/cli/: __init__.py
src/gbclient/: cli.py
src/gitbook/cli/: __init__.py
test/rules/: cli.mk
tests/rules/: docops-gitbook.mk  docops-gloss-terms.mk
tests/rules/cli/: docops-gitbook.mk  docops-gloss-terms.mk
tests/rules/pkg/: poetry.mk
