[tool.poetry]
name = "gitbook-client"
version = "0.0.0"
description = "Python client library and CLI tool for the GitBook API"
authors = ["Naomi Rose <23469+norosa@users.noreply.github.com>"]
packages = [{ include = "gbc", "from" = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
pastel = "^0.2.1"

[tool.poetry.dev-dependencies]
black = { version = "^21.7b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gbc = "gbc.cli:run"

[tool.black]
line-length = 79
