[tool.poetry]
name = "doit-gloss-utils"
version = "0.0.0"
description = "A collection of utilities for the creation and maintenance of technical glossaries"
authors = ["DoiT International <engineering@doit-intl.com>"]
readme = "README.md"
homepage = "https://github.com/doitintl/docops"
repository = "https://github.com/doitintl/docops-gloss-utils"
keywords = ["nlp", "glossaries", "docops"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "License :: Other/Proprietary License"
]
packages = [{ include = "dgloss", "from" = "src" }]
include = ["CHANGELOG.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
charset-normalizer = "^2.0.4"
docopt = "^0.6.2"
pastel = "^0.2.1"
nltk = "^3.6.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = { version = "^21.7b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgloss-analyze-terms = "dgloss.cli.analyze.terms:run"

[tool.black]
line-length = 79
