[tool.poetry]
name = "doit-gitbook-client"
version = "0.0.0"
description = "Python client library and CLI tool for the GitBook API"
authors = ["DoiT International <engineering@doit-intl.com>"]
homepage = "https://github.com/doitintl/gitbook-client"
packages = [{ include = "dgbc", "from" = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
pastel = "^0.2.1"

[tool.poetry.dev-dependencies]
black = { version = "^21.7b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgbc = "dgbc.cli:run"

[tool.black]
line-length = 79
